--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
             <div class="modal-content">
                 <input class="modal-title" placeholder="Titulo" type="text">   
                 <input class="modal-text" placeholder="Adicione uma nota..." type="text">   
-                <span class="modal-close-button">Fechar</span>
+                <span class="modal-close-button">Salvar</span>
             </div>
         </div>
         <header>
