--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
             </div>
         </div>
         <header>
-            <img src="assets/note.png" height="40px" alt="">
+            <img src="assets/note.png" height="50px" alt="PostDay">
             <h2 class="header-title">PostDay</h2>
         </header>
             <div id="form-container">
@@ -40,14 +40,6 @@
               <p id="placeholder-text">Suas notas aparecem aqui</p>
             </div>
             <h1 >
-            
-          <div id="color-tooltip">
-            <div class="color-option" data-color="#fff" id="white"></div>
-            <div class="color-option" data-color="#d7aefb" id="purple"></div>
-            <div class="color-option" data-color="#fbbc04" id="orange"></div>
-            <div class="color-option" data-color="#a7ffeb" id="teal"></div>
-            <div class="color-option" data-color="#ffafcc" id="pink"></div>
-          </div>
     </main>
     <script src="app.js"></script>
 </body>
